[tool.poetry]
name = "qsbi-api"
version = "0.1.0"
description = "QSBI API module"
authors = ["giacinti <philippe@giacinti.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "qsbi"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
qsbi-crud = {path = "../qsbi.crud", develop = true}


[tool.poetry.group.dev.dependencies]
Jinja2 = "^3.1.2"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
