[tool.poetry]
name = "qsbi-api"
version = "0.3.0"
description = "QSBI API module"
authors = ["giacinti <philippe@giacinti.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "qsbi"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
Jinja2 = "^3.1.2"
pytest = "^7.1.3"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
